<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".ui.METARdataFragment">

    <TextView
        android:id="@+id/icao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icao"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/metar_raw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/observed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/icao"
        app:layout_constraintStart_toEndOf="@+id/icao"
        style="@style/DataTextStyle" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/metar_raw" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:text="@string/temperature_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="8dp"
        android:text="@string/text_curr_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTemp"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_dewpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="8dp"
        android:text="@string/text_dewpoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_current"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="8dp"
        android:text="@string/text_humidity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dewpoint"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_current"
        app:layout_constraintStart_toEndOf="@+id/text_current"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/text_dewpoint_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_dewpoint"
        app:layout_constraintStart_toEndOf="@+id/text_dewpoint"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/text_humidity_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_humidity"
        app:layout_constraintStart_toEndOf="@+id/text_humidity"
        style="@style/DataTextStyle" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/text_humidity" />

    <TextView
        android:id="@+id/text_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/start_margin"
        android:text="@string/text_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_clouds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/start_margin"
        android:text="@string/text_cloud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_wind"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/start_margin"
        android:text="@string/text_visibility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_clouds"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/start_margin"
        android:text="@string/text_fr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_visibility"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_wind_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_wind"
        app:layout_constraintStart_toEndOf="@+id/text_wind"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/text_clouds_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_clouds"
        app:layout_constraintStart_toEndOf="@+id/text_clouds"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/text_visibility_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_visibility"
        app:layout_constraintStart_toEndOf="@+id/text_visibility"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/text_fr_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_fr"
        app:layout_constraintStart_toEndOf="@+id/text_fr"
        style="@style/DataTextStyle" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@+id/text_fr" />

    <TextView
        android:id="@+id/textRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:text="@string/readings_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_altimeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/start_margin"
        android:text="@string/text_alt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRead"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/start_margin"
        android:text="@string/text_press"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_altimeter"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_elev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/start_margin"
        android:text="@string/text_elev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_pressure"
        style="@style/LabelTextStyle" />

    <TextView
        android:id="@+id/text_alt_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_altimeter"
        app:layout_constraintStart_toEndOf="@+id/text_altimeter"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/text_press_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_pressure"
        app:layout_constraintStart_toEndOf="@+id/text_pressure"
        style="@style/DataTextStyle" />

    <TextView
        android:id="@+id/text_elev_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_elev"
        app:layout_constraintStart_toEndOf="@+id/text_elev"
        style="@style/DataTextStyle" />

</android.support.constraint.ConstraintLayout>
</ScrollView>